<resources>
    <string name="app_name">AlTasherat</string>
    <string name="unsupported_type">Unsupported type…</string>
    <string name="WritePassword">Enter your password</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="network_unavailable">Please check your internet!</string>
    <string name="send">Send</string>
    <string name="password_reset">Reset Password</string>
    <string name="enter_phone_number">For recover enter your number</string>
    <string name="enter_phone_text">Enter your phone</string>
    <string name="err_msg_enter_country_code">Please Enter Country Code</string>
    <string name="err_msg_enter_valid_first_name">First name must be between 3 and 15 characters</string>
    <string name="err_msg_enter_valid_middle_name">Middle name must be less than 15 characters</string>
    <string name="err_msg_enter_valid_last_name">Last name must be between 3 and 15 characters</string>
    <string name="err_msg_enter_valid_email">Please enter a valid email address with maximum 15 characters</string>
    <string name="err_msg_enter_valid_phone">Phone number must be numeric and between 9 and 15 characters</string>
    <string name="err_msg_enter_valid_password">Password must be between 8 and 50 characters</string>
    <string name="please_wait">Please Wait…</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign out</string>
    <string name="login">"Sign In"</string>
    <string name="confirm_email_txt">"Verify your E-mail"</string>
    <string name="we_send_msg_txt">"We sent a confirmation E-mail to you"</string>
    <string name="check_email_txt">"Check your email and click the confirmation link to continue"</string>
    <string name="skip_txt">Skip</string>
    <string name="enter_otp_text">"Enter the code sent to your mobile phone to continue"</string>
    <string name="enter_password_text">"Enter the password"</string>
    <string name="enter_password_again_text">"Re-enter the password again"</string>
    <string name="enter_new_password">"Enter the new password"</string>
    <string name="enter_old_password">"Enter the old password"</string>
    <string name="repeat_new_password">"Re-enter the new password"</string>
    <string name="enter_password_confirmation">Enter password confirmation</string>
    <string name="repeat_password">Re-enter the password</string>
    <string name="save">Save</string>
    <string name="old_password_txt">Old password</string>
    <string name="new_password_text">New password</string>
    <string name="repeat_new_password_text">Repeat the new password</string>
    <string name="repeat_password_text">Repeat the password</string>
    <string name="change_password">Change Password</string>
    <string name="visa_platform">Visa Platform</string>
    <string name="visa_applications">Visa Applications</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="next">Next</string>
    <string name="hello_onboarding">Welcome to AlTasherat App</string>
    <string name="third_onboarding">Whether you are looking for work or you are a company owner looking for workers, a team of experts at the highest level will be at your service. Just fill out your application in easy steps without complications.</string>
    <string name="first_onboarding">With the Visa application, obtaining your electronic visa has become very easy, whether it is a tourist visa, employment visa, or company owner visas. Do not bear the burden of cumbersome procedures, as we have an entire team working for your convenience.</string>
    <string name="second_onboarding">You can reach your favorite destination anywhere in the world. Just prepare for your trip and leave the rest to us and enjoy a smooth and safe experience in obtaining your tourist visa.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="choose_language">Please select a language</string>
    <string name="choose_state">Please select a country</string>
    <string name="lang_continue">Continue</string>
    <string name="change_language">You can change your country and language at any time from the list</string>
    <string name="back">Previous</string>
    <string name="altasherat_platform">AlTasherat Platform</string>
    <string name="saudi_Riad">Riyadh, Saudi Arabia</string>
    <string name="cairo_location">Cairo - Garden City</string>
    <string name="edit_text_name">Enter your contact name</string>
    <string name="subject">Topic</string>
    <string name="phone">Phone</string>
    <string name="subject_text">Choose a Communication Topic</string>
    <string name="msg_text">Your Message</string>
    <string name="changing_language">Language has changed!</string>
    <string name="login_success">You have been logged in successfully!</string>
    <string name="terms_and_conditions">Terms and Conditions"</string>
    <string name="terms_and_conditions_text">Welcome to the visa platform. Below are the terms and conditions that pertain to the terms of use and access to the pages of the Egypt Key website, giving the words and expressions contained in this agreement.   The customer\'s use of the site is considered an explicit and clear acknowledgment that he has read and understood the terms and conditions of this agreement and the method of using the site. This is considered an express acceptance and approval of the terms and conditions of this agreement and response thereto. The customer\'s use of the site is also considered an explicit acknowledgment of his commitment to and compliance with all terms and conditions of the agreement and all terms and conditions of the Egypt Key Application Foundation.  General Provisions Applicable Law: These Terms of Use and any related non-contractual rights or duties shall be governed by and construed in accordance with the laws of the Kingdom of Saudi Arabia and the Arab Republic of Egypt. Problem Solving: If you have any problems with our services please contact us. We will work hard to solve the problem you face as soon as possible. Any disputes or disagreements related to these Terms of Use, including any related non-contractual rights or duties, shall be settled by the Kingdom of Saudi Arabia and the Arab Republic of Egypt. Rights of Third Parties: A person who is not part of these Terms of Use does not have any right to enforce any of its terms. The relationship of the parties: There is nothing in these terms of use that the parties or others can interpret or interpret to interpret the relationship between us as between partners or agents or create a joint project between the parties, but it is understood and clear that all parties to the agreement are independent parties. Additional Assurances: The Parties will act or arrange to act, document, and other matters within their authority to enforce and verify these Terms of Use, including but not limited to assisting each party to comply with applicable law. Assignment: These Terms of Use are bound to the benefit of the parties and their respective successors and authorized assigns. You agree that you will not assign or transfer these Terms of Use or any of your rights or duties in connection with these Terms of Use, whether directly or indirectly, without prior written consent from us. Entire Agreement: These Terms of Use and the documents referred to or included in these Terms of Use represent the entire agreement between the parties with respect to the subject matter of the Agreement and supersede and supersede all prior agreements, negotiations and representations, written or oral, relating to the subject matter. Except as specified in the Terms of Use and the documents referred to or included in these Terms of Use, there are no conditions, representations, warranties, undertakings or agreements between the parties, whether direct, indirect, collective, express or implied. Amendments: It is not permissible to make any amendment to these terms of use or make any addition or supplement. We reserve the right to amend, alter, add or supplement these Terms of Use at any time or from time to time. We will post the current version of the Terms of Use on the Site and it will be effective when posted on the Site or upon the date specified by us as the “Effective Date” (if any). Your continued use of the Services in the event of any changes constitutes your agreement to be bound by the modified Terms of Use. Severability of clauses: If any of the provisions of these Terms of Use are considered invalid by any of the competent courts or illegal or unenforceable, then this clause of these Terms of Use will be canceled and the rest of the terms and conditions will remain in force as long as the legal and economic substance remains. The transactions concluded under its terms remain valid without any adverse effect on its parties. Disclaimer: Neither party shall be liable for loss, damage, delay, or non-fulfillment resulting from acts beyond the control of either party whether such act could have been foreseen (such as acts of God and actions of legislative, judicial, or regulatory authorities of any federal, state or local government). jurisdictions, actions taken by any of our subcontractors or any third party supplier of goods or services to us, labor disturbances, power outages, or economic boycotts). Non-waiver: Waiver of any of the provisions contained in the Terms of Use does not constitute a waiver of any of the other provisions (similar or not), nor does any other waiver constitute a continuing waiver of any of the provisions in question, unless this is expressly stated in writing. Communication: You can communicate with us via email, through our social media sites, direct chat on the website, or by calling our call center. Continued effectiveness: All provisions which are stated to remain in force or which by their nature apply after the termination of the contract shall remain in effect after the termination or suspension of your membership in the Site.</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more">More</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="phone_number">Phone</string>
    <string name="enter_mobile">Enter Phone Number</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="email_address">E-mail</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_internet_connection">Please check your internet</string>
    <string name="try_again">Please try again</string>
</resources>