<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.signup.presentation.ui.SignupFragment">

    <TextView
        android:id="@+id/textView4"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintBottom_toBottomOf="@+id/textLastName"
        app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/textLastName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/last_name_text_input_layout"
        app:layout_constraintEnd_toStartOf="@id/last_name_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/last_name_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Firstname"
            style="@style/TextInputEditText"
            android:autofillHints="name"
            android:background="@drawable/custom_edit_text_bg"
            android:drawableStart="@drawable/username"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textLastName"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="@+id/last_name_text_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/textLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lastName"
            style="@style/TextInputEditText"
            android:autofillHints="name"
            android:drawableStart="@drawable/username"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName" />
        />/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:text="@string/email_address"
        app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="@+id/last_name_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/TextInputEditText"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/phone_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/phone_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_text_input_layout"
        style="@style/TextInputLayout.Phone"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        app:layout_constraintEnd_toEndOf="@id/email_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Phone_Client"
            style="@style/TextInputEditText"
            android:autofillHints="phone"
            android:background="@drawable/custom_phone_bg"
            android:drawableStart="@drawable/ic_mobile"
            android:hint="@string/enter_mobile"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/et_CountryCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_spinner_background"
        android:popupBackground="@color/Primary"
        app:layout_constraintBottom_toBottomOf="@+id/phone_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/last_name_text_input_layout"
        app:layout_constraintStart_toEndOf="@+id/phone_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/phone_text_input_layout" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:text="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="@id/et_CountryCode"
        app:layout_constraintStart_toStartOf="@+id/phone_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/phone_text_input_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/TextInputEditText"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/WritePassword"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>