<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    >

    <View
        android:id="@+id/rectangle_deletion"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_3sdp"
        android:background="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_tv"
        style="@style/TextView.Heavy"
        android:text="@string/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_deletion" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReTypeNewPassword"
            style="@style/TextInputEditText"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/enter_password_confirmation"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/Button"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="0dp"
        android:text="@string/confirm_delete"
        app:icon="@drawable/ic_delete"
        app:iconGravity="textEnd"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancellation"
        style="@style/Button"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/btn_cancellation_background"
        android:text="@string/cancel"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>