<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.personalInfo.presentation.ui.PersonalInfoFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_profile_section"
        layout="@layout/view_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/more_button"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_8sdp"
        android:backgroundTint="@color/surface"
        android:paddingVertical="-5dp"
        android:text="@string/more"
        android:textColor="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_section">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/first_name"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                app:layout_constraintBottom_toTopOf="@id/first_name_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/first_name_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text_input_layout"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    style="@style/TextInputEditText"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/username"
                    android:hint="@string/enter_first_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/middle_name"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_name"
                app:layout_constraintBottom_toTopOf="@+id/middle_name_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/middle_name_text_input_layout" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/middle_name_text_input_layout"
                style="@style/TextInputLayout"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="@id/first_name_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/first_name_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/first_name_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/middle_name_edit_text"
                    style="@style/TextInputEditText"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/username"
                    android:hint="@string/enter_middle_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/last_name"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                app:layout_constraintBottom_toTopOf="@+id/last_name_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/last_name_text_input_layout" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_input_layout"
                style="@style/TextInputLayout"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="@id/middle_name_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/middle_name_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/middle_name_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    style="@style/TextInputEditText"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/username"
                    android:hint="@string/enter_last_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>