<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    app:cardElevation=".75dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/dialogImage"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:src="@drawable/no_internet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogTitle"
            style="@style/TextView.Heavy"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogImage" />

        <TextView
            android:id="@+id/dialogMessage"
            style="@style/TextView.Medium"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/try_again"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height=".7dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogOkButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>